# ai-discord-bot

./: .gitignore  README.md  bot_gui.py  enhanced_bot.py  knowledge_base.py  process_discord_content.py  pyproject.toml  text_chunker.py
data/: .gitkeep  Hustlers_-_knowledge_992699211801972816.txt  Hustlers_-_quick-tips_1008247264487157840.txt  Hustlers_-_recordings_999038354203095120.txt  Hustlers_-_store-tips_1077012228944957481.txt  Metrics_advice_-_archive_1098053979981754369.txt  Metrics_advice_-_scaling_1176618588107440175.txt  Metrics_advice_-_testing_1176654189678559232.txt  Resources_-_twitter-tips_995230722879139850.txt  Resources_-_youtube_986646936041979985.txt  beispiel_wissen.txt  content_creation_scaling.txt  content_sourcing_high_converting.txt  customer_support_delayed_shipments.txt  disputes_chargebacks_handling.txt  dropshipping_produktrecherche.txt  facebook_ads_negative_comments.txt  facebook_ads_scaling_30k_50k.txt  facebook_ads_testing_strategien.txt  facebook_ads_utm_naming_conventions.txt  replit_info.md  returns_gray_hat_strategies.txt  tiktok_link_in_bio_hack.txt  tiktok_usa_organic_strategy.txt
