[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.4",
    "beautifulsoup4>=4.13.4",
    "discord-py>=2.5.2",
    "fitz>=0.0.1.dev2",
    "google-generativeai>=0.8.5",
    "openai>=1.82.1",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
]
